mula_proc_macro/tests/01-no-output.rs
use mula_proc_macro::mula;

#[mula]
fn mula_fn(input: &'static str) {
    ()
}

fn main() {}